import React from 'react';
import { render } from '@testing-library/react';
import { ThemeProvider, List } from '@gympass/design-system';

describe('<List />', () => {
  describe('Snapshots', () => {
    describe('Without props', () => {
      it('should match snapshot with a default list', () => {
        const { container } = render(
          <ThemeProvider>
            <List>
              <List.Item>
                <div>List test</div>
              </List.Item>
            </List>
          </ThemeProvider>,
        );
        expect(container).toMatchSnapshot();
      });

      it('should match snapshot with a default list and multiple items', () => {
        const { container } = render(
          <ThemeProvider>
            <List>
              <List.Item>
                <div>List test</div>
              </List.Item>

              <List.Item>
                <div>List test</div>
              </List.Item>
            </List>
          </ThemeProvider>,
        );
        expect(container).toMatchSnapshot();
      });

      it('should match snapshot with a default list, multiple items and no dividers', () => {
        const { container } = render(
          <ThemeProvider>
            <List divided={false}>
              <List.Item>
                <div>List test</div>
              </List.Item>

              <List.Item>
                <div>List test</div>
              </List.Item>
            </List>
          </ThemeProvider>,
        );
        expect(container).toMatchSnapshot();
      });

      it('should match snapshot with a horizontal list', () => {
        const { container } = render(
          <ThemeProvider>
            <List horizontal>
              <List.Item>
                <button>List test</button>
              </List.Item>
            </List>
          </ThemeProvider>,
        );
        expect(container).toMatchSnapshot();
      });

      it('should match snapshot with a horizontal list and multiple items', () => {
        const { container } = render(
          <ThemeProvider>
            <List horizontal>
              <List.Item>
                <div>List test</div>
              </List.Item>

              <List.Item>
                <div>List test</div>
              </List.Item>
            </List>
          </ThemeProvider>,
        );
        expect(container).toMatchSnapshot();
      });

      it('should match snapshot with a horizontal list, multiple items and no dividers', () => {
        const { container } = render(
          <ThemeProvider>
            <List horizontal divided={false}>
              <List.Item>
                <div>List test</div>
              </List.Item>

              <List.Item>
                <div>List test</div>
              </List.Item>
            </List>
          </ThemeProvider>,
        );
        expect(container).toMatchSnapshot();
      });

      it('should match snapshot with a default list using divs as wrappers', () => {
        const { container } = render(
          <ThemeProvider>
            <List as="div">
              <List.Item as="div">
                <div>List test</div>
              </List.Item>
            </List>
          </ThemeProvider>,
        );
        expect(container).toMatchSnapshot();
      });

      it('should match snapshot with a horizontal list using divs as wrappers', () => {
        const { container } = render(
          <ThemeProvider>
            <List horizontal as="div">
              <List.Item as="div">
                <div>List test</div>
              </List.Item>
            </List>
          </ThemeProvider>,
        );
        expect(container).toMatchSnapshot();
      });
    });
  });
});
